--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-gabu-900: #071739;
+  --color-gabu-700: #1C3551;
+  --color-gabu-500: #486382;
+  --color-gabu-300: #A4B5C4;
+  --color-gabu-100: #CDD5D8;
+  --color-gabu-error: #D9534F;
+  --font-style-rubik: 'Rubik', sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  dialog::backdrop {
+    @apply bg-gabu-900/50;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
