--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,10 @@
   --font-style-rubik: 'Rubik', sans-serif;
 }
 
+body {
+  font-family: var(--font-style-rubik);
+}
+
 @layer utilities {
   dialog::backdrop {
     @apply bg-gabu-900/50;
