--- a/src/app/home/styles.css
+++ b/src/app/home/styles.css
@@ -9,3 +9,15 @@
   border-radius: 2em;
   border: .3em solid var(--color-gabu-100);
 }
+
+ul::-webkit-scrollbar {
+  background: var(--color-gabu-900);
+  height: 0.5em;
+  border-radius: 0.5em;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background-color: var(--color-gabu-100);
+  border-radius: 1em;
+  border: .35em solid var(--color-gabu-900);
+}
